--- a/helloneighbour/.env.example
+++ b/helloneighbour/.env.example
@@ -1,2 +1,2 @@
-MNEMONIC="..."
-RPC_URL="https://kovan.infura.io/v3/..."
+MNEMONIC="arrest soon grant vacant grace comic daring thumb early find pause panel"
+RPC_URL="HTTP://127.0.0.1:8545"
